# gtest-example

./: CMakeLists.txt  README.md
incs/: mymath.h
src/: main.c  mymath.c
test/: LibMock.cpp  math.cpp
